<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FanFeed</string>
    <string name="welcome_message">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="sport">Sport</string>
    <string name="team">Team</string>
    <string name="select_button">Select</string>
    <string name="sport_prompt">Select a Sport</string>
    <string name="team_prompt">Select a Team</string>
    <string name="register">Regsiter</string>
    <string name="edit_message">Edit a message</string>
    <string-array name="sport_type">
        <item>NFL</item>
        <item>NBA</item>
        <item>NHL</item>
        <item>MLB</item>
    </string-array>
    <string-array name="NFL">
        <item>San Diego</item>
    </string-array>
    <string-array name="NBA">
        <item>LA Lakers</item>
    </string-array>
    <string-array name="NHL">
        <item>Ducks</item>
    </string-array>
    <string-array name="MLB">
        <item>NY Yankees</item>
    </string-array>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
