<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <TextView
        android:text="@string/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:textSize="50sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport"
        android:id="@+id/Sport"
        android:textSize="50sp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:id="@+id/Team"
        android:textSize="50sp"
        android:layout_below="@id/Sport" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_button"
        android:textSize="30dp"
        android:id="@+id/bSelect"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50sp"
        android:textColor="#ffffffff"
        android:background="@null"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sSport"
        android:entries="@array/sport_type"
        android:prompt="@string/sport_prompt"
        android:layout_alignBottom="@id/Sport"
        android:layout_toRightOf="@id/Sport"
        />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sTeam"
        android:prompt="@string/team_prompt"
        android:layout_alignBottom="@+id/Team"
        android:layout_toRightOf="@+id/Team"
        />

</RelativeLayout>
